<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnNewPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.38"
        android:text="@string/new_post" />

    <ListView
        android:id="@+id/articlelist"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        android:layout_weight="1.38" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue_bar" >

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/prev_page" />

        <TextView
            android:id="@+id/pageNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="10"
            android:text="@string/next_page" />

    </LinearLayout>

</LinearLayout>